--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-155.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.08MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.26MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2, server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-250.8KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇫🇷 法国-2.62MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-155.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林) 2
+      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
