--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.26MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-250.8KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇸🇬 新加坡-3.44MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-702.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-270.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-249.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
