--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.26MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-500.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 未知国家-3.39MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇫🇷 法国-2.62MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 未知国家-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
